# UKF-ROS

./: CMakeLists.txt  README.md  package.xml
include/see_ego_motion_ukf/: SensorDataHandler.h  SensorFusionLogic.h  UnscentedKalmanFilter.h  see_ego_motion_ukf_node.h
include/see_ego_motion_ukf/Sensors/: GPS.h  IMU.h  SLAM.h  Sensor.h  SensorNullObject.h  WheelSpeed.h
launch/: see_ego_motion_ukf.launch
msg/: Vehicle.msg
src/: SensorDataHandler.cpp  SensorFusionLogic.cpp  UnscentedKalmanFilter.cpp  see_ego_motion_ukf_node.cpp
src/Sensors/: GPS.cpp  IMU.cpp  SLAM.cpp  Sensor.cpp  SensorNullObject.cpp  WheelSpeed.cpp
